--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
 </div>
 
 <!--load page-->
-<!-- <div class="load-page">
+<div class="load-page">
   <div class="load-page-container"><img src="assets/img/svg/logo/mykure-hosting-logo.svg" alt="imagen de carga"></div>
-</div> -->
+</div>
   <!--boton al cielo-->
     <a href="#top" class="btn-top" data-scroll title="volar al universo! :) jajajajaj te amo piter">
       <i class="fas fa-angle-up"></i>
@@ -335,7 +335,7 @@
       //funcion de cargar pagina
       let load = document.getElementsByClassName("load-page");
       document.addEventListener("DOMContentLoaded", () => {
-      $(load).fadeOut("slod");
+      $(load).fadeOut("slow");
       });
       /* $(window).on("load", function(){
         $(".load-page").fadeOut("slow");
