--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <img src="assets/img/svg/logo/mykure-hosting-logo.svg" alt="mykure-hosting-logo">
       </div>
       <div class="section-home-desc">
-        <h1>Mykure Hosting</h1>
+        <h1 id="app"></h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolorem reprehenderit mollitia ipsa, quasi dolor nemo. Dolorum repellendus, atque doloremque, tempore excepturi impedit nulla id veniam voluptate iure aliquid modi nisi deserunt illo numquam consequuntur exercitationem obcaecati incidunt delectus velit optio facilis fugit? Facilis enim exercitationem reiciendis aspernatur quae in soluta. Accusamus neque blanditiis magni ducimus! Ullam ad quo temporibus quam! Molestiae, delectus, ullam iusto possimus assumenda repellendus commodi quis veniam eveniet nihil, architecto distinctio a veritatis provident sed sunt eum nostrum eos quod ipsa hic tempora in aspernatur! Eligendi placeat ut, nisi pariatur molestiae totam debitis illo vel distinctio.</p>
       </div>
     </div>
@@ -342,5 +342,8 @@
         $(".load-page").fadeOut("slow");
       }); */
     </script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="assets/js/typewrite.js"></script>
+
 </body>
 </html>
