--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="hosting, mykure hosting, hosting paraguay">
+    <meta name="description" content="Mykure hosting, pagina web en desarrollo, proximamente, alojamiento web en paraguay">
+    <meta name="copyright" content="Mykure hosting todos los derechos reservados 2022" />
+    <meta name="theme-color" content="#191919">
     <title>Mykure Hosting</title>
     <!--iconos de mierda jaja-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/brand/v1-0/apple-touch-icon.png">
