--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
       <div class="section-home-desc">
         <h1 id="app"></h1>
-        <p id="desc"><!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolorem reprehenderit mollitia ipsa, quasi dolor nemo. Dolorum repellendus, atque doloremque, tempore excepturi impedit nulla id veniam voluptate iure aliquid modi nisi deserunt illo numquam consequuntur exercitationem obcaecati incidunt delectus velit optio facilis fugit? Facilis enim exercitationem reiciendis aspernatur quae in soluta. Accusamus neque blanditiis magni ducimus! Ullam ad quo temporibus quam! Molestiae, delectus, ullam iusto possimus assumenda repellendus commodi quis veniam eveniet nihil, architecto distinctio a veritatis provident sed sunt eum nostrum eos quod ipsa hic tempora in aspernatur! Eligendi placeat ut, nisi pariatur molestiae totam debitis illo vel distinctio. --></p>
+        <p id="desc"></p>
       </div>
     </div>
   </div>
@@ -290,9 +290,9 @@
 </div>
 
 <!--load page-->
-<div class="load-page">
+<!-- <div class="load-page">
   <div class="load-page-container"><img src="assets/img/svg/logo/mykure-hosting-logo.svg" alt="imagen de carga"></div>
-</div>
+</div> -->
   <!--boton al cielo-->
     <a href="#top" class="btn-top" data-scroll title="volar al universo! :) jajajajaj te amo piter">
       <i class="fas fa-angle-up"></i>
