--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
 </div>
 
 <!--load page-->
-<!-- <div class="load-page">
+<div class="load-page">
   <div class="load-page-container"><img src="assets/img/svg/logo/mykure-hosting-logo.svg" alt="imagen de carga"></div>
-</div> -->
+</div>
   <!--boton al cielo-->
     <a href="#top" class="btn-top" data-scroll title="volar al universo! :) jajajajaj te amo piter">
       <i class="fas fa-angle-up"></i>
