modificacion de protect
imagenes

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="section-home">
     <div class="section-home-container">
       <div class="section-home-img">
-        <img src="assets/img/svg/logo/mykure-hosting-logo.svg" alt="mykure-hosting-logo">
+        <img  src="assets/img/svg/logo/mykure-hosting-logo.svg"  alt="mykure-hosting-logo" id="imagenes">
       </div>
       <div class="section-home-desc">
         <h1 id="app"></h1>
@@ -350,6 +350,7 @@
     </script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="assets/js/typewrite.js"></script>
+    <script src="assets/js/protect.js"></script>
 
 </body>
 </html>
